--- a/aboutme-website/index.html
+++ b/aboutme-website/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div class='header'>
-          <div class='welcome'>About Me</div>
+          <div class='welcome'>Courtney Gibson</div>
       </div>          
     <!--about me section-->
       <div class="about-containter">
