--- a/aboutme-website/index.html
+++ b/aboutme-website/index.html
@@ -24,7 +24,7 @@
                     sport is basketball. In my free time I like to workout, watch movies, listen to podcast and read of course. 
                     I am currently an IT in the Coast Guard. I graduated from southern university with a BS degree in criminal 
                     justice, that i do not really use unfortantely. In college my first major was actually computer science and
-                    for some odd yound and crazy reason i changed it. But like the old saying goes "Whats meant to be will be!". 
+                    for some odd young and crazy reason i changed it. But like the old saying goes "Whats meant to be will be!". 
                     Which is why I would like to be apart of this program.  
               </p>
             </div>
@@ -39,7 +39,7 @@
       <div class="social">
         <ul>
           <li><a href="https://www.facebook.com/courtney.danielle.3557?ref=bookmarks"><img src="icons/001-facebook.png"></a></li>
-          <li><a href="https://www.instagram.com/co_bang/"><img src="icons/002-instagram.png"></a></li>
+          <li><a href="https://www.instagram.com/co_bang/"><img src="icons/002-instagram.png"width='100' height='100'></a></li>
           <li><a href="https://github.com/courtneygibson94"><img src="icons/003-github-logo.png"></a></li>
         </ul>
       </div>
