--- a/aboutme-website/index.html
+++ b/aboutme-website/index.html
@@ -38,8 +38,8 @@
     <footer>
       <div class="social">
         <ul>
-          <li><a href="https://www.facebook.com/courtney.danielle.3557?ref=bookmarks"><img src="icons/001-facebook.png"width='100' height='100'></a></li>
-          <li><a href="https://www.instagram.com/co_bang/"><img src="icons/002-instagram.png"width='100' height='100'></a></li>
+          <li><a href="https://www.facebook.com/courtney.danielle.3557?ref=bookmarks"><img src="icons/001-facebook.png"width='100' height='100'/></a></li>
+          <li><a href="https://www.instagram.com/co_bang/"><img src="icons/002-instagram.png"width="100" height="100"/></a></li>
           <li><a href="https://github.com/courtneygibson94"><img src="icons/003-github-logo.png"></a></li>
         </ul>
       </div>
