--- a/aboutme-website/index.html
+++ b/aboutme-website/index.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="https://www.facebook.com/courtney.danielle.3557?ref=bookmarks"><img src="icons/001-facebook.png"width='50' height='50'/></a></li>
           <li><a href="https://www.instagram.com/co_bang/"><img src="icons/002-instagram.png"width="50" height="50"/></a></li>
-          <li><a href="https://github.com/courtneygibson94"><img src="icons/003-github-logo.png"></a></li>
+          <li><a href="https://github.com/courtneygibson94"><img src="icons/003-github-logo.png" width="50" height="50"/></a></li>
         </ul>
       </div>
 
